--- a/Krasnokamensk.mw
+++ b/Krasnokamensk.mw
@@ -5,11 +5,11 @@
  | Lidnanznam text = Krasnokamenskan lidnanznam
  | Flag text = Krasnokamenskan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 52,811
- | Voz' = 2017
+ | Eläjiden lugu = 51,451
+ | Voz' = 2021
  | Pind = 73
  | Fail = ЛиАЗ-677 на улице Краснокаменска.JPG
- | Pämez' = Jurii Didenko<br />(sügüz'ku 2015—)
+ | Pämez' = Igor' Mudrak<br />(sügüz'ku 2020—)
  | Telefonkod = +7-30245-xx-xxx
  | Avtokod = 75. 80
  | Aigvö = [[UTC]]+9 ([[MSK]]+6)
@@ -19,6 +19,8 @@
 == Istorii ==
 Eländpunktan aluz om pandud vl 1968 kuti geologijan žilo tedoidamha [[uran (himine element)|uranan]] löudmižsijad. Vl 1969 sai lidnan statusad, saudihe samha uranad kaivuzmahtusel. Järedad sodaväged sijazisoiš lidnas nevondkundaližen aigan.
 
+Krasnokamensk šingotase uranan samižel tähäsai (Arguninverine tegimištoline kaivuzhimine ühtelmaz), mugažo hilen samižel.
+
 == Geografijan andmused ==
 Lidn sijadase Argunin mägisel'gan ezimägištol, 535 m ü.m.t. keskmäižel korktusel. Matkad [[Kitai]]n röunhasai om 50 km suvipäivnouzmha, [[Čit]]hasai om 380 km lodeheze orhal vai 550 km avtotedme. Lähembaižed lidnad oma [[Borz']] 112 km päivlaskmha orhal vai 155 km avtol i [[Man'čžurii (lidn)|Man'čžurii]] (Kitai, {{lang-zh|满洲里}} ''Mǎnžōulǐ'') 105 km suvipäivlaskmha avtotedme. Raudtestancii om lopuline sarakol Priargunsk-žilhosai. Lidnan pertid mülüdas mikrorajonihe, läz ei ole nimitadud irdoid.
 
@@ -26,6 +28,24 @@ Krasnokamensk om lidnankundan üks'jäine eländpunkt.
 
 == Eläjad ==
 Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 56 670 ristitud, rajonan seičeme kahesandest. Kaikiš suremb ristitišt oli 70 tuhad eläjid vl 1987.
+
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Spasan londuseližen mel'kuvan jumalanpert'<ref>[http://sobory.ru/geo/locat/6520 Krasnokamenskan pühäpertid ''sobory.ru''-saital.] {{ref-ru}}</ref> om saudud vll 2002−2005.
+
+Professionaližen opendusen aluzkundad oma kaks' proškolad, medicinine kolledž, [[MIFI|MIFI:n]] filial, Čitan kaivuztehnikuman filial.
+
+Edeline lidnan pämez' om Jurii Didenko (sügüz'ku 2015 — sügüz'ku 2020).
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Krasnokamensk, 6th microdistrict.jpg|Kudenden mikrorajonan pertišt (2019)
+Краснокаменск. Церковь Спаса Нерукотворного Образа.JPG|Spasan londuseližen mel'kuvan jumalanpert', vn 2015 nägu
+Krasnokamensk, 2nd microdistrict.jpg|Kahtenden mikrorajonan pertišt (2019)
+Krasnokamensk, 3rd microdistrict.jpg|Koumanden mikrorajonan pertišt (2020)
+Krasnokamensk, 4th microdistrict.jpg|Nelländen mikrorajonan pertišt (2019)
+</gallery>
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://красно-каменск.рф/ Lidnan tobmuden aluzkundoiden oficialine sait (''красно-каменск.рф'').] {{ref-ru}}
