--- a/Mogoč.mw
+++ b/Mogoč.mw
@@ -5,11 +5,11 @@
  | Lidnanznam text = 
  | Flag text = 
  | Valdkund = Venäma
- | Eläjiden lugu = 13,442
- | Voz' = 2017
+ | Eläjiden lugu = 12,992
+ | Voz' = 2021
  | Pind = 20
  | Fail = Mogocha.jpg
- | Pämez' = Evgenii Krasnov<br />(tal'vku 2011—)
+ | Pämez' = Natal'ja Veko<br />(sügüz'ku 2019—)
  | Telefonkod = +7-30241-xx-xxx
  | Avtokod = 75. 80
  | Aigvö = [[UTC]]+9 ([[MSK]]+6)
@@ -17,7 +17,7 @@
 '''Mogoč''' ({{lang-ru|Могоча}}) om [[Venäma]]n lidn da lidnankund [[Baikalantagaine rand|Baikalantagaižen randan]] pohjoižpäivnouzmas. Se om [[Mogočan rajon]]an administrativine keskuz.
 
 == Istorii ==
-Eländpunktan aluz om pandud vl 1910 žiloks raudtestancijanno sauvomha [[Transsib]]an Amuran raudted. Stancii om avaitud vspäi 1914, nimitihe jogen mödhe. Žilo šingotihe [[kuld]]an samižel, i vl 1950 sai lidnan statusad.
+Eländpunktan aluz om pandud vl 1910 žiloks raudtestancijanno sauvomha [[Transsib]]an Amuran raudted. Stancii om avaitud vspäi 1914, nimitihe jogen mödhe. Gidronim libui evenkan kelen ''mongoči''-nimitusespäi: [[evenkalaižed|evenkalaižiden]] ''mongo''-heim i ''či''-suffiks «kenen». Žilo šingotihe [[kuld]]an samižel, i vl 1950 sai lidnan statusad.
 
 Vspäi 1968 sijazihe il'mvägid Mogočas i sauvoškanzihe nügüd'aigaižikš. Lidn om kuldan samižen rajonan keskuseks, sen päedheotandad mülüdas raudten i mecan ümbriradmižen sarakoihe.
 
@@ -27,7 +27,21 @@ Lidn sijadase Amazaran mägisel'gan ezimägištol, 620 m ü.m.t. keskmäižel ko
 Čaldonk-žilo ({{lang-ru|село Чалдонка}}, 284 rist. vl 2010) i koume pen't žilod raudtestancijanno mülüdas lidnankundha Mogočan ližaks. Lidnankundan pind — 69,38 km².
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 13 258 ristitud, lidnankundan — 13 652 ristitud, rajonan viž ühesandest. Kaikiš suremb lidnan ristitišt oli vll 1970−1992, enamba 17 tuh. eläjid (17 884 vl 1970). Vl 2017 kaik 13 785 ristitud elädas lidnankundas.
+Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 13 258 ristitud, lidnankundan — 13 652 ristitud, rajonan viž ühesandest. Kaikiš suremb lidnan ristitišt oli vll 1970−1992, enamba 17 tuh. eläjid (17 884 ristitud vl 1970). Vl 2017 kaik 13 442 ristitud elihe i 13 785 ristitud kaikes lidnankundas.
+
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Raštvoiden jumalanpert'<ref>[http://sobory.ru/geo/locat/18190 Mogočan pühäpertid ''sobory.ru''-saital.] {{ref-ru}}</ref> om pühästadud vl 2014.
+
+Edeline lidnankundan pämez' om Jevgenii Krasnov (tal'vku 2011 — sügüz'ku 2019).
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Здание железнодорожного вокзала ст.Могоча 3138411.jpeg|Raudteiden i pertišton nägu päraudtestancijaspäi (2013)
+Въезд в Могочу - panoramio.jpg|Znam lidnan röunal (2010)
+Здание железнодорожного вокзала ст.Могоча 3138407.jpeg|Mogoč-päraudtestancijan sauvuz vl 2013
+</gallery>
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://админмогоча.рф/ Lidnankundan tobmuden aluzkundoiden oficialine sait (''админмогоча.рф'').] {{ref-ru}}
