--- a/Nerčinsk.mw
+++ b/Nerčinsk.mw
@@ -5,11 +5,11 @@
  | Lidnanznam text = Nerčinskan lidnanznam
  | Flag text = Nerčinskan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 14,912
- | Voz' = 2017
+ | Eläjiden lugu = 14,648
+ | Voz' = 2021
  | Pind = 100
- | Fail = Воскресенский собор (Нерчинск).jpg
- | Pämez' = Mihail Slesarenko<br />(keväz'ku 2017—)
+ | Fail = Дом купца Верхотурова. Улица Шилова, 6, Нерчинск, Нерчинский район, Забайкальский край.jpg
+ | Pämez' = Roman Senotrusov<br />(keväz'ku 2021—)
  | Telefonkod = +7-30242-xx-xxx
  | Avtokod = 75. 80
  | Aigvö = [[UTC]]+9 ([[MSK]]+6)
@@ -27,12 +27,26 @@ Lidn sijadase [[Nerč]]-jogen ({{lang-ru|Нерча}}) hural randal tobjimalaz, 
 Pen' Makejevk-žilo (33 rist. vl 2017) mülüb lidnankundha Nerčinskan ližaks.
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 14 959 ristitud, lidnankundan — 14 999 ristitud, rajonan viž ühesandest. Kaikiš suremb lidnan ristitišt oli läz 17 tuh. eläjid vll 1979−1992 (17 000 rist. vl 1992). Vl 2017 kaik 14 945 ristitud elädas lidnankundas.
+Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 14 959 ristitud, lidnankundan — 14 999 ristitud, rajonan viž ühesandest. Kaikiš suremb lidnan ristitišt oli läz 17 tuh. eläjid vll 1979−1992 (17 000 rist. vl 1992). Vl 2017 kaik 14 912 ristitud elihe lidnas i 14 945 ristitud kaikes lidnankundas.
 
-Nerčinskan agrarine tehnikum om professionaližen opendusen aluzkundaks.
+Nerčinskan agrarine tehnikum<ref>[http://nat-nrch.ru/ Nerčinskan agrarižen tehnikuman sait (''nat-nrch.ru'').] {{ref-ru}}</ref> om professionaližen opendusen aluzkundaks.
+
+Edeline lidnan pämez' om Mihail Slesarenko (keväz'ku 2017 — sügüz'ku 2020, sid' radoi Nerčinskan rajonan pämehen).
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Бутинский дворец.jpg|Mihail Butin-torgovanan pert'kulu (2020)
+Воскресенский собор, Улица Погодаева, 85, Нерчинск, Нерчинский район, Забайкальский край.jpg|Sündun Eläbzdusen päjumalanpert', vn 2020 nägu
+Торговые ряды. Площадь Борцов Революции, Нерчинск, Нерчинский район, Забайкальский край.jpg|Istorižed torguindrived vl 2020
+Винная монополия, улица Ярославского, 34, Нерчинск, Нерчинский район, Забайкальский край.jpg|Vinmonopolijan istorine sauvuz (2021)
+Здание городской думы. Улица Советская, 54, Нерчинск, Нерчинский район, Забайкальский край.jpg|Lidnan Duman istorine sauvuz (2020)
+</gallery>
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
-* [http://гпнерчинское.нерчинск.забайкальскийкрай.рф/ Lidnan tobmuden aluzkundoiden oficialine sait (''гпнерчинское.нерчинск.забайкальскийкрай.рф'') Baikalantagaižen randan portalal.] {{ref-ru}}
+* [http://гпнерчинское.нерчинск.чита.рф/ Lidnan tobmuden aluzkundoiden oficialine sait (''гпнерчинское.нерчинск.чита.рф'').] {{ref-ru}}
 {{Commons|Category:Nerchinsk}}
 
 {{Baikalantagaižen randan lidnad}}
