--- a/Det_gamle_riket.mw
+++ b/Det_gamle_riket.mw
@@ -1,6 +1,6 @@
 '''«Det gamle riket»''' (''Vanh kunigahuz'') om norvegižen [[Windir]]-gruppan kahtenz' [[demo (muzik)|demoal'bom]]. Se om pästtud vl [[1996]].
 
-Demoal'bom om sätud [[metal]]-stilin blek- i folk-čuradusiš.
+Demoal'bom om sätud [[metal]]-stilin blek- i folk-čuradusiš. Sen nellän pajon ühthine hätkeližuz om 22 min 16 s.
 
 == Pajoiden nimikirjutez ==
 # ''Mørkrets fyrste'' (7:27, Pimedusen princ)
