--- a/Čilin_valdkundznam.mw
+++ b/Čilin_valdkundznam.mw
@@ -4,6 +4,14 @@
 == Ümbrikirjutand ==
 Andine [[kondor]] ({{lang-la|Vultur gryphus}}) i suviandine [[pedr]] (''Hippocamelus bisulcus'') vencad päl pid'oiteldas rindhankatust polišpäi. Živatad oma [[Andad|Andiden]] simvolišpäi, valdkund vedase pidust' niid. Laud da sen üläh oma mujutadud [[Čilin flag]]an kartte. Tähtaz sijadase laudan keskuses. Valdkundan ispanijankel'ne deviz om kirjutadud lental laudan al: ''Por la Razón o la Fuerza'' — «Oiktusel vai vägel».
 
+== Edeližed valdkundznamad ==
+<gallery>
+Coat of Arms of Chile (1812-1814).svg|Voziden 1812−1814 Čilin znam
+</gallery>
+
+== Homaičendad ==
+<references />
+
 {{Commons|Category:Coats of arms of Chile}}
 
 {{stub}}
