--- a/Čilin_valdkundznam.mw
+++ b/Čilin_valdkundznam.mw
@@ -2,7 +2,7 @@
 '''Čilin valdkundznam''' ({{lang-es|Escudo de Chile}}) om [[Čilin Tazovaldkund]]an üks' oficialižiš simvolišpäi. Nügüdläine valdkundznam om vahvištadud 1834-ndel vodel kezakun 26. päiväl. Sen tegii om anglijalaine Čarl'z Vud Teilor-pirdai ({{lang-en|Charles Wood Taylor}}, 1792−1856).
 
 == Ümbrikirjutand ==
-Andine [[kondor]] ({{lang-la|Vultur gryphus}}) i suviandine [[pedr]] (''Hippocamelus bisulcus'') vencad päl pid'oiteldas rindhankatust polišpäi. Živatad oma [[Andad|Andiden]] simvolišpäi, valdkund vedase pidust' niid. Laud da sen üläh oma mujutadud [[Čilin flag]]an kartte. Tähtaz sijadase laudan keskuses. Valdkundan ispanijankel'ne deviz om kirjutadud lental laudan al: ''Por la Razón o la Fuerza'' — «Oiktusel vai vägel».
+Andine [[kondor]] ({{lang-la|Vultur gryphus}}) i suviandine [[pedr]] (''Hippocamelus bisulcus'') vencad päl pid'oiteldas rindhankatust polišpäi. Živatad oma [[Andad|Andiden]] simvolišpäi, valdkund vedase pidust' niid. Laud da sen üläh oma mujutadud [[Čilin flag]]an kartte. Tähtaz sijadase laudan keskuses. Valdkundan ispanijankel'ne deviz om kirjutadud lental laudan al: ''Por la Razón o la Fuerza'' — «Oiktusel vai vägel», se om ližatud valdkundznamha vl 1920.
 
 == Edeližed valdkundznamad ==
 <gallery mode="packed" heights="125px">
