*Empty MediaWiki Message*

--- a/Gončarov_Viktor.mw
+++ b/Gončarov_Viktor.mw
@@ -1,5 +1,5 @@
 {{Personalii}}
-'''Viktor Mihailovič Gončarov''' ({{lang-ru|Виктор Михайлович Гончаров}}; sünd. [[7. kül'mku]] [[1920]], [[Krasnodar|Jekaterinodar]], [[Kubanin da Mustmeren agj]], [[Venäman NFST]] — kol. [[13. semendku]] [[2001]], [[Moskv]], [[Venäma]]) oli nevondkundaline i venälaine kirjutai, runokirjutai da pirdai. [[Sur' Tatanmaine soda|Suren sodan]] toranik. Sai valdkundaližiden arvlahjoiden riven.
+'''Viktor Mihailovič Gončarov''' ({{lang-ru|Виктор Михайлович Гончаров}}; sünd. [[7. sügüz'ku]] [[1920]], [[Krasnodar|Jekaterinodar]], [[Kubanin da Mustmeren agj]], [[Venäman NFST]] — kol. [[13. semendku]] [[2001]], [[Moskv]], [[Venäma]]) oli nevondkundaline i venälaine kirjutai, runokirjutai da pirdai. [[Sur' Tatanmaine soda|Suren sodan]] toranik. Sai valdkundaližiden arvlahjoiden riven.
 
 == Biografii ==
 Mehen runod lähtliba Kubanin «Krasnoje znamä»-lugendlehteses vspäi 1934. Gončarov oli pästnus Literaturižes institutaspäi A.M. Gor'kijan nimed (Moskv) vl 1951.
