--- a/Virun_kel'.mw
+++ b/Virun_kel'.mw
@@ -1,6 +1,11 @@
-'''Virun kel'''' (ičeze nimituz: ''võro kiil'') om üks' suomalaiž-ugrilaižiš kelišpäi, [[Baltijan meren suomalaižed keled|Baltijan meren suomalaine kel']]. Sil pagištas [[Estinma]]n longibokas. Pagižijoiden lugu om läz 74 tuhad ristituid. Faktižikš, se om eriline kirjankel', kudamb om sinteziruidud [[estin kel'|estin kelen]] dialektan tüvel.
+'''Virun kel'''' (ičeze nimituz: ''võro kiil'') om üks' suomalaiž-ugrilaižiš kelišpäi, [[Baltijan meren suomalaižed keled|Baltijan meren suomalaine kel']]. Sil pagištas [[Estinma]]n longibokas.
+
+Kelen pagižijoiden lugu om läz 74 tuhad ristituid. Faktižikš, se om eriline kirjankel', kudamb om sinteziruidud [[estin kel'|estin kelen]] dialektan tüvel.
 
 Virun kirjkel' om olmas [[latinan kirjamišt]]on pohjal.
+
+== Kacu mugažo ==
+* [[Virun Vikipedii]]
 
 == Homaičendad ==
 <references/>
