--- a/Virun_kel'.mw
+++ b/Virun_kel'.mw
@@ -1,8 +1,13 @@
-'''Virun kel'''' (ičeze nimituz: ''võro kiil'') om üks' suomalaiž-ugrilaižiš kelišpäi, [[Baltijan meren suomalaižed keled|Baltijan meren suomalaine kel']]. Sil pagištas [[Estinma]]n longibokas.
+'''Virun kel'''' (ičeze nimituz: ''võro kiil'') om üks' suomalaiž-ugrilaižiš kelišpäi, [[Baltijan meren suomalaižed keled|Baltijan meren suomalaine kel']]. Sil pagištas [[Estinma]]n longibokas, sen [[Viru]]n i [[Pilv]]an makundoiš, om pagižijoid Tartus i Tallidnas.
 
 Kelen pagižijoiden lugu om läz 74 tuhad ristituid. Faktižikš, se om eriline kirjankel', kudamb om sinteziruidud [[estin kel'|estin kelen]] dialektan tüvel.
 
-Virun kirjkel' om olmas [[latinan kirjamišt]]on pohjal.
+Virun kirjkel' om olmas [[latinan kirjamišt]]on pohjal. Vokaliden garmonii om keles, kudambad ei ole estin keles.
+
+== Kävutand ==
+Opetas necidä kirjkel't valdkundan 26 školas kerdan nedališ.
+
+Estinman severziden-se scenaristoiden, runokirjutajiden da kirjutajiden sädused oma tehtud virun kirjankelel eziauguižešti. «Uma Leht»-lugendlehtez lähtleb kaks' kerdad kus.
 
 == Kacu mugažo ==
 * [[Virun Vikipedii]]
