--- a/Ridžvejan_te.mw
+++ b/Ridžvejan_te.mw
@@ -1,5 +1,8 @@
+[[Fail:Ridgeway map.png|thumb|right|250px|Ten kart]]
 [[Fail:Ridgeway mongwell.jpg|thumb|right|250px|Ridžvejan te]]
-'''Ridžvejan te''' ({{lang-en|The Ridgeway}}) om [[Anglii|Anglijan]] üks' kaikiš amuižembiš teišpäi. Se om varatud [[neolit]]an aigaspäi, om tehtud läz 3 tuhad vozid edel m.a. ümbärdamha olnuzid enččes kor'bid i soid. Ten piduz om 135 km, se mäneb viden grafkundan territorijadme.
+'''Ridžvejan te''' ({{lang-en|The Ridgeway}} vai ''Ridgeway National Trail'') om [[Sur' Britanii|Suren Britanijan]] üks' kaikiš amuižembiš kaičenus teišpäi.
+
+Te om varatud [[neolit]]an aigaspäi, om tehtud läz 3 tuhad vozid edel m.e. ümbärdamha olnuzid enččes kor'bid i soid. Ten piduz om 135 km, se mäneb [[Anglii|Anglijan]] suvipalan viden grafkundan territorijadme.
 
 {{Commons|Category:Ridgeway National Trail}}
 
