--- a/Ridžvejan_te.mw
+++ b/Ridžvejan_te.mw
@@ -1,8 +1,8 @@
 [[Fail:Ridgeway map.png|thumb|right|250px|Ten kart]]
 [[Fail:Ridgeway mongwell.jpg|thumb|right|250px|Ridžvejan te]]
-'''Ridžvejan te''' ({{lang-en|The Ridgeway}} vai ''Ridgeway National Trail'') om [[Sur' Britanii|Suren Britanijan]] üks' kaikiš amuižembiš kaičenus teišpäi.
+'''Ridžvejan te''' ({{lang-en|The Ridgeway}}) om [[Sur' Britanii|Suren Britanijan]] üks' kaikiš amuižembiš kaičenus teišpäi.
 
-Te om varatud [[neolit]]an aigaspäi, om tehtud läz 3 tuhad vozid edel m.e. ümbärdamha olnuzid enččes kor'bid i soid. Ten piduz om 135 km, se mäneb [[Anglii|Anglijan]] suvipalan viden grafkundan territorijadme.
+Te om varatud [[neolit]]an aigaspäi, om tehtud läz 3 tuhad vozid edel m.e. ümbärdamha olnuzid enččes kor'bid i soid lähižiš alangištoiš. Ten piduz om 140 km, se mäneb kukhidme [[Anglii|Anglijan]] suvipalan viden grafkundan territorijadme. Rahvahaline ''Ridgeway National Trail''-maršrut om avaitud matkadajiden täht endevanhan ten alusel vl 1972. Matkkirjad jagadas ted kudeks keskustaks.
 
 {{Commons|Category:Ridgeway National Trail}}
 
