--- a/Ridžvejan_te.mw
+++ b/Ridžvejan_te.mw
@@ -4,6 +4,10 @@
 
 Te om varatud [[neolit]]an aigaspäi, om tehtud läz 3 tuhad vozid edel m.e. ümbärdamha olnuzid enččes kor'bid i soid lähižiš alangištoiš. Ten piduz om 140 km, se mäneb kukhidme ({{lang-en|ridge}}) [[Anglii|Anglijan]] suvipalan viden grafkundan territorijadme. Rahvahaline ''Ridgeway National Trail''-maršrut om avaitud matkadajiden täht endevanhan ten alusel vl 1972. Matkkirjad jagadas ted kudeks keskustaks.
 
+Äi neolitan, bronz- i raudaigoiden arheologižid da istorižid muštnikoid sijadasoiš Ridžuein läheli. Te om avaitud veloturistoile.
+
+== Irdkosketused ==
+* [http://nationaltrail.co.uk/ Ridžuein oficialine sait (''nationaltrail.co.uk'').] {{ref-en}}
 {{Commons|Category:Ridgeway National Trail}}
 
 {{stub}}
