--- a/Ridžvejan_te.mw
+++ b/Ridžvejan_te.mw
@@ -1,5 +1,5 @@
 [[Fail:Ridgeway map.png|thumb|right|250px|Ten kart]]
-[[Fail:Ridgeway mongwell.jpg|thumb|right|250px|Ridžvejan te. Grimz-Ditč-pudotez läz Monguellad]]
+[[Fail:Ridgeway mongwell.jpg|thumb|right|250px|Ridžvejan te. Grimz-Ditč-pudotesel läz Monguellad]]
 '''Ridžvejan te''' ({{lang-en|The Ridgeway}}) om [[Sur' Britanii|Suren Britanijan]] üks' kaikiš amuižembiš kaičenus teišpäi.
 
 Te om varatud [[neolit]]an aigaspäi, om tehtud läz 3 tuhad vozid edel m.e. ümbärdamha olnuzid enččes kor'bid i soid lähižiš alangištoiš. Ten piduz om 140 km, se mäneb kukhidme ({{lang-en|ridge}}) [[Anglii|Anglijan]] suvipalan viden grafkundan territorijadme. Rahvahaline ''Ridgeway National Trail''-maršrut om avaitud matkadajiden täht endevanhan ten alusel vl 1972. Matkkirjad jagadas ted kudeks keskustaks.
@@ -7,7 +7,7 @@ Te om varatud [[neolit]]an aigaspäi, om tehtud läz 3 tuhad vozid edel m.e. üm
 Äi neolitan, bronz- i raudaigoiden arheologižid da istorižid muštnikoid sijadasoiš Ridžuein läheli. Te om avaitud veloturistoile.
 
 == Irdkosketused ==
-* [http://nationaltrail.co.uk/ Ridžuein oficialine sait (''nationaltrail.co.uk'').] {{ref-en}}
+* [https://www.nationaltrail.co.uk/en_GB/trails/the-ridgeway/ Ridžuein oficialine lehtpol' ''nationaltrail.co.uk''-saital.] {{ref-en}}
 {{Commons|Category:Ridgeway National Trail}}
 
 {{stub}}
