sanoiden järgenduz om kova

--- a/Lukašenko_Aleksandr.mw
+++ b/Lukašenko_Aleksandr.mw
@@ -4,7 +4,7 @@
 }}
 '''Aleksandr Grigor'jevič Lukašenko''' ({{lang-be|Аляксандр Рыгоравіч Лукашэнка}}, {{lang-ru|Александр Григорьевич Лукашенко}}; sünd. [[30. eloku]] [[1954]], [[Kopis']], [[Vitebskan agj]], [[Vaugedvenäma|Vaugedvenäman NST]], [[Nevondkundaline Ühtištuz|NSTÜ]]) om nügüdläine [[Vaugedvenäma]]n prezident<ref>[http://lenta.ru/lib/14159843/ ''Lenta.ru'': Лукашенко, Александр.] {{ref-ru}}</ref>. Radab videnden strokun jäl'geten (vs [[1994]] heinkun 20. päiväspäi; videnz' strok — vn 2015 redukun 11. päivän valičendoiden jäl'ghe).
 
-[[Venäman hogahtuz Ukrainha (2022)|Venäman hogahtusen Ukrainha]] aigal Lukašenko pid'oiteli [[Putin Vladimir|Putinan]] da abuti hänele sodas; sidä äjiden maiden pämehed kogonaižes mail'mas lugedas pahaks, sikš Vaugedvenämha tuliba sankcijad. 
+[[Venäman hogahtuz Ukrainha (2022)|Venäman hogahtusen Ukrainha]] aigal Lukašenko pid'oiteli [[Putin Vladimir|Putinan]] da abuti hänele sodas. Kogonaižen mail'man äjiden maiden pämehed lugetihe sidä pahaks, sikš sankcijad tuliba Vaugedvenämha. 
 
 == Homaičendad ==
 <references />
