--- a/Putin_Vladimir.mw
+++ b/Putin_Vladimir.mw
@@ -5,7 +5,7 @@
 }}
 '''Vladimir Vladimirovič Putin''' ({{lang-ru|Владимир Владимирович Путин}}; sünd. 7. reduku 1952, [[Piter|Leningrad]], [[Venäman NFST]], [[Nevondkundaline Ühtištuz|NSTÜ]]) oli [[Venäma|Venälaižen Federacijan]] kahtenz' lugul prezident vll 2000−2008 i om sen nellänz' lugul prezident vspäi 2012. Hän radoi mugažo Venäman päministran kahtišti, vozil 1999−2000 i 2008−2012.
 
-Vl. 2022 hän om augotanu [[Venäman hogahtuz Ukrainha (2022)|Venäman hogahtusen Ukrainha]], kudamban kogonaižen mail'man äjiden maiden pämehed da äjad ristitud (mugažo Venämas) lugetihe pahaks.
+Vn 2022 uhokus politikanmez' om augotanu [[Venäman hogahtuz Ukrainha (2022)|Venäman hogahtusen Ukrainha]]. Kogonaižen mail'man äjiden maiden pämehed da äjad järgeližed ristitud (Venämas mugažo) lugetihe pahaks sidä azjad.
 
 == Biografii ==
 Tuleban aigan prezident openui Leningradan valdkundaližes universitetas vll 1970−1975, sen juridižen fakul'tetan rahvahidenkeskeižes palakundas.
