--- a/Dal'negorsk.mw
+++ b/Dal'negorsk.mw
@@ -5,15 +5,16 @@
  | Lidnanznam text = Dal'negorskan lidnanznam
  | Flag text = 
  | Valdkund = Venäma
- | Eläjiden lugu = 35,034
- | Voz' = 2017
+ | Eläjiden lugu = 33,803
+ | Voz' = 2021
  | Pind = 31
  | Fail = Dalnegorsk center.jpg
- | Pämez' = Igor' Sahuta (2013—)
+ | Pämez' = Aleksandr Terebilov<br />(heinku 2019—)
  | Telefonkod = +7-42373-xx-xxx
  | Aigvö = [[UTC]]+10 (MSK+7)
 }}
-'''Dal'negorsk''' ({{lang-ru|Дальнегорск}}) om [[Venäma]]n lidn [[Merenrandaline rand|Merenrandaližen randan]] päivnouzmas. Se om lidn randan alištusenke, [[Dal'negorskan lidnümbrik]]on (edel 1998 vot — rajonan) administrativine keskuz.
+[[Fail:Narrow Gauge Railroad Dalpolimetall.jpg|thumb|left|250px|Lidnan kart i «Dal'polimetall»-edheotandan kaidraižuine raudte (2018)]]
+'''Dal'negorsk''' ({{lang-ru|Дальнегорск}}) om [[Venäma]]n lidn [[Merenrandaline rand|Merenrandaližen randan]] päivnouzmas. Se om lidn randan alištusenke, [[Dal'negorskan lidnümbrik]]on (edel 1998. vot — rajonan) administrativine keskuz.
 
 == Istorii ==
 Eländpunktan aluz om pandud vl 1897 kuti ''Tetühe-külä'' samha äimetalližid kivendoid, nimitihe jogen mödhe ({{lang-zh|野猪河}} ''ječžuhe'' «mecsigoiden jogi»). Vspäi 1930 oli radnikžiloks. Vl 1972 udesnimitihe Tetühe-radnikžilod nügüdläižikš. Vl 1989 Dal'negorsk sai lidnan statusad.
@@ -23,10 +24,22 @@ Dal'negorsk šingotase neniden substancijoiden samižel: [[tin]], [[cink]], [[ha
 == Geografijan andmused ==
 Lidn sijadase 35 kilometras [[Japonijan meri|Japonijan meren]] randaspäi, [[Sihote-Alin']]-mägisisteman päivnouzmaižil pautkil, 180..804 m korktusil valdmeren pindan päl, 200 m keskmäižel korktusel. Dal'negorsk om läz 25 km pitte i 2..3 km levette, seižub pidust' Rudnai-jogen randoid (lankteb merhe). Jogen alangišt om kaid i ümbärtud sambnuziden vulkanoiden pautkil. Matkad [[Vladivostok]]hasai om 340 km suvipäivlaskmha orhal vai 490 km avtotedme (05H-100). Lähembaižed järedad eländpunktad oma lidnanvuitte [[Kavalerovo]]-žilo 68 km suvipäivlaskmha avtotedme i [[Arsen'jev (lidn)|Arsen'jev-lidn]] 187 km päivlaskmha orhal vai 255 km sil-žo avtotel.
 
-Kaik 7 küläd mülüdas lidnümbrikho Dal'negorskan ližaks.
+Kaik seičeme küläd mülüdas lidnümbrikho Dal'negorskan ližaks.
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 37 519 ristitud, ümbrikon ristitišton nell' videndest. Kaikiš suremb lidnan ristitišt oli 50 400 eläjad vl 1992. [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] kaks' pühäpertid om lidnas: phh. Borisan i Gleban jumalanpert', ph. Jurgijan-vägestusenkandajan pühäpert'.
+Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 37 519 ristitud, ümbrikon ristitišton nell' videndest. Kaikiš suremb lidnan ristitišt oli 50 400 eläjad vl 1992.
+
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] kaks' pühäpertid om lidnas: phh. Borisan i Gleban jumalanpert', ph. Jurgijan-vägestusenkandajan pühäpert'.
+
+Edeline lidnan pämez' om Igor' Sahuta (kül'mku 2013 — 2018).
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Dalnegorsk winter landscape.jpg|Lidnan ühthine nägu Televizionnai-mägespäi (uhoku 2018)
+Dalnegorsk. Chemical enterprise (WR).tif|Himine edheotand vl 2001
+2002 год, Дальнегорск.jpg|Kodielon holitišiden keskuz (2002)
+Dalnegorsk winter landingarea.jpg|Lendimport vl 2018
+</gallery>
 
 == Irdkosketused ==
 * [http://www.dalnegorsk-mo.ru/ Lidnümbrikon tobmuden aluzkundoiden oficialine sait (''dalnegorsk-mo.ru'').] {{ref-ru}}
