--- a/Dal'nerečensk.mw
+++ b/Dal'nerečensk.mw
@@ -1,14 +1,14 @@
 {{Eländpunkt
  | Nimi = Dal'nerečensk<br />Дальнереченск
- | Lidnanznam = Coat of Arms of Dalnerechensk (Primorsky krai).png
+ | Lidnanznam = Coat of Arms of Dalnerechensk (Primorsky kray).png
  | Flag = Flag of Dalnerechensk (Primorsky kray).png
  | Lidnanznam text = Dal'nerečenskan lidnanznam
  | Flag text = Dal'nerečenskan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 26,121
+ | Eläjiden lugu = 24,786
  | Voz' = 2017
- | Pind = 108
- | Fail = Дальнереченск, здание администрации.jpg
+ | Pind = 108.49
+ | Fail = Dalnereshensk view.jpg
  | Pämez' = Aleksandr Pavlov<br />(reduku 2014—)
  | Telefonkod = +7-42356-xx-xxx
  | Aigvö = [[UTC]]+10
@@ -30,7 +30,16 @@ Klimat om [[ven vö|ven]] kontinentaline. Vilukun keskmäine lämuz om −18,8 C
 == Eläjad ==
 Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 27 604 ristitud. Kaikiš suremb ristitišt oli 39,7 tuhad eläjid vl 1996.
 
-Edahaižen Päivnouzmpolen federaližen universitetan alajaguz om professionaližen üläopendusen aluzkundaks.
+Tegimištoliž-tehnologine kolledž<ref>[http://pu27.com/ Tegimištoliž-tehnologižen kolledžan sait (''pu27.com'').] {{ref-ru}}</ref> om professionaližen üläopendusen aluzkundaks.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Дальнереченск, здание администрации.jpg|Lidnan administracijan sauvuz (2012)
+Dalnerechensk, Primorsky Krai, Russia - panoramio (8).jpg|Spasan londuseližen mel'kuvan jumalanpert', vn 2012 nägu
+Dalnerechensk, Primorsky Krai, Russia - panoramio (10).jpg|Sodakomissariat (2012, ende «Kunst&Albers»-torguindkodin sauvuz)
+Дальнереченск, дом культуры Восток.jpg|«Vostok»-kul'turkeskuz (''Päivnouzm'')
+Дальнереченск, ж-д вокзал.jpg|Dal'nerečensk I-päraudtestancijan sauvuz vl 2012
+</gallery>
 
 == Homaičendad ==
 <references/>
