--- a/Šuman_Klara.mw
+++ b/Šuman_Klara.mw
@@ -1,8 +1,9 @@
 {{A10000}}
 {{Personalii
-| изображение = Elliott & Fry - Clara Schumann (ca.1890, crop).jpg
+|изображение = Elliott & Fry - Clara Schumann (ca.1890, crop).jpg
+|описание изображения = Klara Šuman läz 1890. vot
 }}
-'''Klara Žozefina Vik Šuman''' ({{lang-de|Clara Josephine Wieck Schumann}}; sünd. [[13. sügüz'ku]] [[1819]], [[Läipcig]], [[Saksonii (kunigahuz)|Saksonii-kunigahuz]], [[Germanine Ühtnend]] — kol. [[20. semendku]] [[1896]], [[Frankfurt Mainal]], [[Prussii (kunigahuz)|Prussii-kunigahuz]], [[Germanine imperii]]) oli [[Saksanma|saksalaine]] pianist, muzikankirjutai da muzikaline pedagog. [[Šuman Robert|Robert Šumanan]] ak.
+'''Klara Žozefina Vik Šuman''' ({{lang-de|Clara Josephine Wieck Schumann}}; sünd. [[13. sügüz'ku]] [[1819]], [[Läipcig]], [[Saksonii (kunigahuz)|Saksonii-kunigahuz]], [[Germanine Ühtnend]] — kol. [[20. semendku]] [[1896]], [[Frankfurt Mainal]], [[Prussii (kunigahuz)|Prussii-kunigahuz]], [[Germanine imperii]]) oli [[romantizm]]-aigan [[Saksanma|saksalaine]] pianist, muzikankirjutai da muzikaline pedagog. [[Šuman Robert|Robert Šuman]]-muzikankirjutajan ak i hänen sädusiden ezmäine vändai vspäi 1840.
 
 == Homaičendad ==
 <references/>
