--- a/Šuman_Klara.mw
+++ b/Šuman_Klara.mw
@@ -5,6 +5,8 @@
 }}
 '''Klara Žozefina Vik Šuman''' ({{lang-de|Clara Josephine Wieck Schumann}}; sünd. [[13. sügüz'ku]] [[1819]], [[Läipcig]], [[Saksonii (kunigahuz)|Saksonii-kunigahuz]], [[Germanine Ühtnend]] — kol. [[20. semendku]] [[1896]], [[Frankfurt Mainal]], [[Prussii (kunigahuz)|Prussii-kunigahuz]], [[Germanine imperii]]) oli [[romantizm]]-aigan [[Saksanma|saksalaine]] pianist, muzikankirjutai da muzikaline pedagog. [[Šuman Robert|Robert Šuman]]-muzikankirjutajan ak i hänen sädusiden ezmäine vändai vspäi 1840.
 
+Muzikankirjutajaks Klara Šuman tegi äi sädusid fortepjanon täht, sidä kesken nell' koncertad orkestran täht fortepjanonke. Tegi muzikad pajoile tetabiden saksalaižiden runokirjutajiden runoiden alusel.
+
 == Homaičendad ==
 <references/>
 
