--- a/Baltijan_meren_suomalaižed_keled.mw
+++ b/Baltijan_meren_suomalaižed_keled.mw
@@ -1,7 +1,8 @@
+[[Fail:Balto-Finnic language family.png|thumb|right|350px|Baltijan meren suomalaižiden keliden kart (leviganduz, 2021)]]
 '''Baltijan meren suomalaižed keled''' om keliden oks, kudamb mülütadas [[suomalaiž-ugrilaižed keled|suomalaiž-ugrilaižhe kel'gruppha]].
 
 == Klassifikacii ==
-Nened keled mülüdas Baltijan meren suomalaižiden keliden gruppha:
+Nened keled mülüdas baltijan meren suomalaižiden keliden gruppha:
 * [[suomen kel']]
 * [[ižoran kel']]
 * [[karjalan keled]]
