--- a/Baltijan_meren_suomalaižed_keled.mw
+++ b/Baltijan_meren_suomalaižed_keled.mw
@@ -1,5 +1,7 @@
 [[Fail:Balto-Finnic language family.png|thumb|right|350px|Baltijan meren suomalaižiden keliden kart (leviganduz, 2021)]]
-'''Baltijan meren suomalaižed keled''' om keliden oks, kudamb mülütadas [[suomalaiž-ugrilaižed keled|suomalaiž-ugrilaižhe kel'gruppha]].
+'''Baltijan meren suomalaižed keled''' om keliden oks [[Evrop]]an pohjoižes. Mülütadas sidä [[suomalaiž-ugrilaižed keled|suomalaiž-ugrilaižhe kel'gruppha]].
+
+Keliden grupp om erigoittud 9. voz'sadaspäi. Pagižijoiden ühthine lugu om 7 mln ristituid. Keliden kandajiden tobj pala eläb [[Baltijan meri|Baltijan meren]] basseinan pohjoižpäivnouzmas: Suomenma, Baltijan mad, Venäman lodeh.
 
 == Klassifikacii ==
 Nened keled mülüdas baltijan meren suomalaižiden keliden gruppha:
