--- a/Avstrijan_flag.mw
+++ b/Avstrijan_flag.mw
@@ -1,15 +1,14 @@
 [[Fail:Flag of Austria.svg|border|right|250px]]
 '''Avstrijan flag''' ({{lang-de|Flagge Österreichs}}) om [[Avstrii|Avstrijan Tazovaldkundan]] üks' oficialižiš simvolišpäi.
 
-Nügüdläine flag om vahvištadud [[1919]]-nden voden 21. päiväl redukud. Flagan proporcii ei ole pandud oficialižikš, no ottas ''2:3'' päpaloin.
+Nügüdläine flag om vahvištadud [[1919]]-nden voden 21. päiväl redukud. Ei olend väges germanižen okkupacijan aigan (keväz'ku 1938 — sulaku 1945). Flagan proporcii ei ole pandud oficialižikš, no ottas ''2:3'' päpaloin.
 
 == Ümbrikirjutand ==
 Flag kogoneb koumes lapakoiktas tazostadud šoiduspäi: rusttad oma ülähän i alahan, vauged šoid kuvadase keskuses.
 
 Rusked muju kuvadab kodimannavedijoiden jokstud maha vered toriš Tazovaldkundan joudjudhe i ripmatomudhe näht. Vauged muju simvolizuruib [[Dunai]]-joged, se läbitab Avstrijad päivlaskmaspäi päivnouzmha, mugažo rahvahan sadud joudjut monarhijan kiltan tagapäi.
 
-== Kacu mugažo ==
-* [[Avstrijan valdkundznam]]
+Flagan versii [[Avstrijan valdkundznam|valdkundznamanke]] keskuses kävutase Avstrijan tobmuden organoil.
 
 == Homaičendad ==
 <references />
