--- a/Bardan_rajon.mw
+++ b/Bardan_rajon.mw
@@ -6,9 +6,16 @@ Rajonan aluz om pandud vl 1930. Nimitihe lidnan-keskusen mödhe. [[Evlah]] — [
 Bardan rajon šingotase äisarakoližel maižandusel, om sömtegimišton i sauvondmaterialiden edheotandoid.
 
 == Geografijan andmused ==
-Rajon sijadase Karabahan tazangišton keskuses, 61 m ü.m.t. keskmäižel korktusel. Se jagase 110 municipalitetaks. Pened manrehkaidused oma paksud.
+Rajon sijadase Karabahan tazangišton keskuses, 61 m ü.m.t. keskmäižel korktusel. Tazangišt mäneb pautkil i lainhil sijidme, alemb mi 200 m ü.m.t. kortte. Pened manrehkaidused oma paksud.
 
-Vl 2019 rajonan ristitišt oli 156 300 eläjad 957 km² pindal, heišpäi 99,9% oma [[azerbaidžanlaižed]] (2009).
+Londuseližed varad oma saven i letken löudmižsijad, bur mahuz. Spravitajan mineralveden purde sijadase Muganli-žilos.
+
+Rajon jagase 110 municipalitetaks.
+
+== Eläjad ==
+Vl 2019 rajonan ristitišt oli 156 300 eläjad 957 km² pindal, heišpäi 99,9% oma [[azerbaidžanlaižed]] (2009). Kaikiš suremb ristitišt om nügüd'.
+
+Vl 2009 eläjiden viž seičemendest oliba külälaižed.
 
 == Homaičendad ==
 <references/>
