--- a/Lüneburg.mw
+++ b/Lüneburg.mw
@@ -9,15 +9,19 @@
  | Voz' = 2015
  | Pind = 70.34
  | Fail = Rathaus2.jpg
- | Pämez' = Ul'rih Medge<br/>(1991—)
+ | Pämez' = Klaudia Kališ<br/>(2021−2026,<br/>''Claudia Kalisch'')
  | Telefonkod = +49-4131
  | Aigvö = tal'vel [[UTC]]+1,<br />kezal [[UTC]]+2
 }}
 '''Lüneburg''' (täuz' nimituz [[saksan kel'|saksan kelel]] om ''Hansestadt Lüneburg'' [ˈhan.zə.ʃtat ˈlyː.nə.bʊɐk], [[alasaksan kel'|alasaks]].: ''Lümborg'') om lidn [[Saksanma]]n pohjoižes, [[Alasaksonii]]-federacijanmas.
 
+== Geografijan andmused ==
 Lidn sijadase Il'menau-jogen randal ([[El'b (jogi)|El'ban]] hura ližajogi), 17 m korktusel valdmeren pindan päl. Matkad [[Gamburg]]hasai om 50 km lodeheze kiruhtedme.
 
+== Eläjad ==
 Vl 2013 eläjiden lugu oli 71 668 ristitud. Port om [[El'ban kül'gkanal]]an (saks. ''Elbe-Seitenkanal'') randal.
+
+Edeline lidnan pämez' om Ul'rih Medge (1991−2021, ''Ulrich Mädge'').
 
 == Irdkosketused ==
 * [http://www.lueneburg.de/ Lidnan tobmuden aluzkundoiden sait (''lueneburg.de'').] {{ref-de}}
