--- a/Lüneburg.mw
+++ b/Lüneburg.mw
@@ -13,7 +13,7 @@
  | Telefonkod = +49-4131
  | Aigvö = tal'vel [[UTC]]+1,<br />kezal [[UTC]]+2
 }}
-'''Lüneburg''' (täuz' nimituz [[saksan kel'|saksan kelel]] om ''Hansestadt Lüneburg'' [ˈhan.zə.ʃtat ˈlyː.nə.bʊɐk], [[alasaksan kel'|alasaks]].: ''Lümborg'') om lidn [[Saksanma]]n pohjoižes, [[Alasaksonii]]-federacijanmas.
+'''Lüneburg''' (täuz' nimituz [[saksan kel'|saksan kelel]] om ''Hansestadt Lüneburg'' [ˈhan.zə.ʃtat ˈlyː.nə.bʊɐk], {{lang-nds|Lümborg}}) om lidn [[Saksanma]]n pohjoižes, [[Alasaksonii]]-federacijanmas.
 
 == Geografijan andmused ==
 Lidn sijadase Il'menau-jogen randal ([[El'b (jogi)|El'ban]] hura ližajogi), 17 m korktusel valdmeren pindan päl. Matkad [[Gamburg]]hasai om 50 km lodeheze kiruhtedme.
