--- a/Lüneburg.mw
+++ b/Lüneburg.mw
@@ -15,6 +15,11 @@
 }}
 '''Lüneburg''' (täuz' nimituz [[saksan kel'|saksan kelel]] om ''Hansestadt Lüneburg'' [ˈhan.zə.ʃtat ˈlyː.nə.bʊɐk], {{lang-nds|Lümborg}}) om lidn [[Saksanma]]n pohjoižes, [[Alasaksonii]]-federacijanmas.
 
+== Istorii ==
+Eländpunkt mainitase aigkirjoiš vspäi 956. Vspäi 1158 äjad Lüneburgan torgovanad ühtniba Torguindühtištushe, se oli edel Ganzad. Lidn ühtni [[Ganzan ühtištuz|Ganzan ühtištushe]] sen alusenpanendaspäi vl 1356 kahten sün tagut: geografine sijaduz i kommertine znamoičend, [[sol]]an samižen purtked oma läz lidnad.
+
+Lüneburg oli Braunšvaig-Lüneburg-gercogkundan pälidnan 16.-17. voz'sadoil, [[Vel'fad]] ohjandiba sil. Hö sirdiba gercogkundan pälidnad [[Gannover]]ha, i Lüneburgan politiž-ekonomine znamoičend poleni.
+
 == Geografijan andmused ==
 Lidn sijadase Il'menau-jogen randal ([[El'b (jogi)|El'ban]] hura ližajogi), 17 m korktusel valdmeren pindan päl. Matkad [[Gamburg]]hasai om 50 km lodeheze kiruhtedme.
 
