--- a/Fokino_(Merenrandaline_rand).mw
+++ b/Fokino_(Merenrandaline_rand).mw
@@ -5,8 +5,8 @@
  | Lidnanznam text = Fokinon lidnanznam (Merenrandaline rand)
  | Flag text = 
  | Valdkund = Venäma
- | Eläjiden lugu = 23,157
- | Voz' = 2017
+ | Eläjiden lugu = 22,628
+ | Voz' = 2021
  | Pind = 16
  | Fail = Бухта Абрек.jpg
  | Pämez' = Aleksandr Baranov<br />(tal'vku 2016—)
@@ -30,7 +30,14 @@ Lidnan keskuzpala sijadase mägidenkeskeižes katl'uses 2 kilometras randaspäi,
 Lidnanvuiččed Dunai- (7 614 rist. vl 2017) i Putätin-žilod (780 rist. vl 2017) mülüdas lidnümbrikho Fokinon ližaks. SATÜ:n pind — 291,29 km², korktused 0..530 m.
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 23 696 ristitud, lidnümbrikon — 32 164 ristitud. Kaikiš suremb lidnan ristitišt oli vll 1996−2009, 25..26 tuhad eläjid (26 500 rist. vl 1996 i vl 2003).
+Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 23 696 ristitud, lidnümbrikon — 32 164 ristitud. Kaikiš suremb lidnan ristitišt oli 25..26 tuhad eläjid vll 1996−2009 (26 500 rist. vl 1996 i vl 2003).
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Tsukanova.jpg|Marija Tsukanovan muštnik (2015)
+RIAN archive 836839 All-night vigil on Christmas Eve at St.Andrews Church in the town of Fokino.jpg|Raštvoiden kanman ph. Ondrii Ezikuctud-apostolan jumalanpertiš, vn 2011 nägu
+Посёлок Дунай.jpg|Dunai-žilon nägu Starcevan mägelpäi (2014)
+</gallery>
 
 == Irdkosketused ==
 * [http://dumafokino.ru/ «Fokino-lidn»-SATÜ:n Duman oficialine sait (''dumafokino.ru'').] {{ref-ru}}
