--- a/Lesozavodsk.mw
+++ b/Lesozavodsk.mw
@@ -5,30 +5,44 @@
  | Lidnanznam text = Lesozavodskan lidnanznam
  | Flag text = 
  | Valdkund = Venäma
- | Eläjiden lugu = 35,816
- | Voz' = 2017
+ | Eläjiden lugu = 34,827
+ | Voz' = 2021
  | Pind = 71
  | Fail = Река Уссури в Лесозаводске.JPG
- | Pämez' = ''sija om vakantine'' (2017)
+ | Pämez' = Konstantin Bancejev<br />(uhoku 2021—)
  | Telefonkod = +7-42355-xx-xxx
  | Aigvö = [[UTC]]+10 (MSK+7)
 }}
 '''Lesozavodsk''' ({{lang-ru|Лесозаводск}}) om [[Venäma]]n lidn [[Merenrandaline rand|Merenrandaližen randan]] päivlaskmas. Se om [[Lesozavodskan lidnümbrik]]on administrativine keskuz.
 
 == Istorii ==
-Vspäi 1894 ristitud tuliba elämhä sihe [[Venälaine imperii|Venälaižen imperijan]] Kijevan, Černigovan i Poltavan gubernijoišpäi, paniba stanicoiden alusid. Šingotihe mecan ümbriradmišt, «Ussurin mecanümbriradai kombinat» oli olmas nevondkundaližen aigan. ''Lesozavodsk-eländpunkt'' om sätud vl 1932 radnikžiloks nügüdläiženke nimenke Dal'les-žilon, Ussuri-stancijan (nüg. Lesozavodsk-1, om olmas jogen hural randal) da küliden ühtištusel. Žilo sai lidnan statusad vl 1938. Vozil 1963—1992 lidn alištui randan tobmudele oikti.
+Vspäi 1894 ristitud tuliba elämhä sihe [[Venälaine imperii|Venälaižen imperijan]] Kijevan, Černigovan i Poltavan gubernijoišpäi, paniba stanicoiden alusid. Šingotihe mecan ümbriradmišt, «Ussurin mecanümbriradai kombinat» oli olmas nevondkundaližen aigan. ''Lesozavodsk-eländpunkt'' om sätud vl 1932 radnikžiloks nügüdläiženke nimenke Dal'les-žilon, Ussuri-stancijan (nüg. Lesozavodsk-1, om olmas jogen hural randal) da küliden ühtištusel. Žilo sai lidnan statusad vl 1938. Vozil 1963−1992 lidn alištui randan tobmudele oikti.
 
 == Geografijan andmused ==
 Lidn sijadase [[Ussuri]]-jogen muugotil randoil, 80 m keskmäižel korktusel valdmeren pindan päl. Matkad [[Vladivostok]]hasai om 269 km suvipäivlaskmha orhal vai 350 km «Ussuri»-avtotedme. [[Kitai]]n valdkundröun om 10 km lodeheze. Lähembaižed lidnad oma [[Dal'nerečensk]] 57 km pohjoižpäivnouzmha orhal vai 72 km «Ussuri»-avtotedme, i kitajine [[Hulin']]-lidn 63 km lodeheze avtotedme.
 
-19 küläd da 2 raudtestancijad mülüdas lidnümbrikho Lesozavodskan ližaks. Lidnümbrikon pind — 3 063,8 km², se röunatab Kitainke.
+Kaik 19 küläd da kaks' raudtestancijad mülüdas lidnümbrikho Lesozavodskan ližaks. Lidnümbrikon pind — 3 063,8 km², se röunatab Kitainke.
 
-== Eläjad da ižanduz ==
-Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 37 034 ristitud, lidnümbrikon ristitišton nell' videndest. Kaikiš suremb ristitišt oli vozil 1992—2001, 45..46 tuhad eläjid (vl 1996 — 46 800 rist.). [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Ph. Mikulai-čudonsädajan jumalanpert' sijadase lidnas.
+== Eläjad ==
+Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 37 034 ristitud, lidnümbrikon ristitišton nell' videndest. Kaikiš suremb ristitišt oli 45..46 tuhad eläjid vozil 1992−2001 (46 800 rist. vl 1996).
 
-''Ružino-raudtestancii'' om [[Transsib]]an pala, sijadase [[Habarovsk]] — [[Ussuriisk]] jonol, seižub jogen oiktal randal vspäi 1936. Stancii om kaikiš surembaks radonandajaks: vagondepo, vedimiden depo, raudten elektrovaratoitandan distancii sijadasoiš lidnas. Toižed edheotandad — mebel'fabrik, omblendfabrik, sömtegimišton edheotandad. Professionaližen opendusen aluzkundad: industrialine kolledž, Mererandaline tegimišton da ekonomikan tehnikum, Vladivostokan bazižen medicinižen kolledžan filial.
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] ph. Mikulai-čudonsädajan jumalanpert' sijadase lidnas.
+
+== Ižanduz ==
+''Ružino-raudtestancii'' om [[Transsib]]an pala, sijadase [[Habarovsk]] — [[Ussuriisk]] jonol, seižub jogen oiktal randal vspäi 1936. Stancii om kaikiš surembaks radonandajaks: vagondepo, vedimiden depo, raudten elektrovaratoitandan distancii sijadasoiš lidnas. Toižed edheotandad — mebel'fabrik, omblendfabrik, sömtegimišton edheotandad.
+
+Professionaližen opendusen aluzkundad: Lesozavodskan industrialine kolledž<ref>[http://les-collegelik.ru/ Lesozavodskan industrialižen kolledžan sait (''les-collegelik.ru'').] {{ref-ru}}</ref>, Mererandaline mectehnologijoiden, ekonomikan i transportan kolledž (ende tehnikum), Vladivostokan bazižen medicinižen kolledžan filial.
 
 Avtobusad da taksid oma kundaližeks transportaks lidnas. Kümnekilometrine sarak «Ussuri»-avtotelpäi (A-370) tuleb lidnha päivnouzmpolespäi. Raudtesild i R449-ten avtotesild ristikoitas Ussuri-joged neciš lidnas.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+На мосту через Уссури Лесозаводск фото 2012 года.JPG|Avtotesild Ussuriš päliči vl 2012
+Вокзал ст. Ружино.jpg|''Ružino''-päraudtestancijan sauvuz vl 2005
+</gallery>
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://mo-lgo.ru/ Lesozavodskan lidnümbrikon tobmuden aluzkundoiden oficialine sait (''mo-lgo.ru'').] {{ref-ru}}
